--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="StyleSheet" href="css/style.css">
+    <link rel="StyleSheet" href="style.css">
     <title>KOKOKA</title>
 </head>
 <body>
@@ -29,6 +29,6 @@
         </div>
     </section>
 
-    <script src="javascript/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
