--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button>Get Started</button>
             </div>
             <div class="column-right">
-                <img src="img/code-on.jfif" alt="Code On">
+                <img src="code-on.jfif" alt="Code On">
             </div>
         </div>
     </section>
